--- a/css/contacto.css
+++ b/css/contacto.css
@@ -118,7 +118,7 @@ main {
     background-size: contain;
 }
 
-.bloques {
+.bloqueContacto {
     width: 100%;
     height: 1000px;
     display: flex;
